metadata/force-app/main/default/objects/CustomName_lfeQX__c/CustomName_lfeQX__c.object-meta.xml
<CustomObject>
    <description>Description_klXtT</description>
    <label>CustomLabel_pTHOw</label>
    <nameField>
        <label>CustomLabel_pTHOw</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_pTHOws</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>