metadata/force-app/main/default/objects/CustomName_lfeQX__c/fields/CustomField_Jbbwa__c.field-meta.xml
<CustomField>
    <fullName>CustomField_Jbbwa__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldLUQdo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>