metadata/force-app/main/default/objects/CustomName_lfeQX__c/fields/CustomField_MmlGS__c.field-meta.xml
<CustomField>
    <fullName>CustomField_MmlGS__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldxkmuw</label>
    <length>255</length>
    <type>Text</type>
</CustomField>